<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marine_acoustic_msgs</name>
  <version>0.0.0</version>
  <description>
    The marine_acoustic_msgs package, including messages for common
    underwater sensors (DVL, multibeam sonar, imaging sonar)
  </description>

  <description>TODO: Package description</description>
  <maintainer email="shivam361v@gmail.com">shivam</maintainer>
  <license>BSD-3-Clause</license>

    <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build dependencies -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

    <!-- Runtime dependencies -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Migrate old SonarImage type to ProjectedSonarImage -->
    <rosbag_migration_rule rule_file="bmr/order00_projected_sonar_image.bmr"/>
    <!-- Rename all message types from hydrographic_msgs/acoustic_msgs
         to marine_msgs/marine_acoustic_msgs -->
    <rosbag_migration_rule rule_file="bmr/order02_package_rename.bmr"/>
  </export>
</package>
